--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="countries.js" defer></script>
-    <link rel="stylesheet" href="countries.css">
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   </body>
