--- a/index.html
+++ b/index.html
@@ -10,9 +10,97 @@
 
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="countries.js" defer></script>
+    <link rel="stylesheet" href="countries.css" />
+    <script
+      src="https://kit.fontawesome.com/331797fb3b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+          <a href="/" class="navbar-brand">
+            <i class="fab fa-accusoft pr-1"></i>Details Sanctum
+          </a>
+
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#myNavBar"
+            aria-controls="myNavBar"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="myNavBar">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a href="/index.html" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="/about.html" class="nav-link">About</a>
+              </li>
+              <li class="nav-item">
+                <a href="/courses.html" class="nav-link">Courses</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Help
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Facebook</a>
+                  <a class="dropdown-item" href="#">YouTube</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Github</a>
+                </div>
+              </li>
+              <li class="nav-item active">
+                <a href="/blog.html" class="nav-link">Details</a>
+              </li>
+              <li class="nav-item">
+                <a href="/contact.html" class="nav-link">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <div class="jumbotron">
+      <div class="container">
+        <div class="ml-3">
+          <h1 class="font-italic">
+            <i class="fab fa-accusoft pr-1"></i>Details Sanctum!!!
+          </h1>
+        </div>
+ 
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a href="/">Home</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="/pages">Sanctum</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Countries
+            </li>
+          </ol>
+        </nav>
+      </div>
+    </div>
   </body>
 </html>
